[gd_scene load_steps=11 format=3 uid="uid://clroff7vduxfd"]

[ext_resource type="Script" uid="uid://b3g0scjmcqvsw" path="res://components/game_tree.gd" id="1_8crwi"]
[ext_resource type="Script" uid="uid://clq280pj1hwdx" path="res://components/server_connection/players_mgr.gd" id="1_q3u5y"]
[ext_resource type="PackedScene" uid="uid://l8snhtkec4yq" path="res://ui/gui_mgr.tscn" id="2_ooffa"]
[ext_resource type="Script" uid="uid://efl41i01tva5" path="res://components/server_connection/player_data_mgr.gd" id="3_f0eyj"]
[ext_resource type="Script" uid="uid://bua46w4qkhr2v" path="res://components/server_connection/server_interface.gd" id="3_sw6lo"]
[ext_resource type="Script" uid="uid://bnbo2q7p87pow" path="res://components/server_connection/enet_server.gd" id="4_t4jwi"]
[ext_resource type="Script" uid="uid://6chdyvdnouf4" path="res://components/server_connection/server_connector.gd" id="5_d04qd"]
[ext_resource type="Script" uid="uid://bdm1wqa4nd3b8" path="res://components/server_connection/ping_mgr.gd" id="6_g7dyb"]
[ext_resource type="Script" uid="uid://cvvp2pnf02iv8" path="res://components/server_connection/connection_timeout.gd" id="7_qu4p1"]
[ext_resource type="Script" uid="uid://birhnwsn1ggw6" path="res://components/logger.gd" id="8_ar0u2"]

[node name="GameTree" type="Node"]
script = ExtResource("1_8crwi")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://c0klh1wf8gtol")
spawn_path = NodePath("../PlayersMgr")

[node name="PlayersMgr" type="Node" parent="."]
script = ExtResource("1_q3u5y")
metadata/_custom_type_script = "uid://clq280pj1hwdx"

[node name="PlayerDataMgr" type="Node" parent="."]
script = ExtResource("3_f0eyj")

[node name="GuiMgr" parent="." instance=ExtResource("2_ooffa")]

[node name="ServerInterface" type="Node" parent="."]
script = ExtResource("3_sw6lo")
metadata/_custom_type_script = "uid://bua46w4qkhr2v"

[node name="EnetServer" type="Node" parent="ServerInterface"]
script = ExtResource("4_t4jwi")
metadata/_custom_type_script = "uid://bnbo2q7p87pow"

[node name="ServerConnector" type="Node" parent="ServerInterface"]
script = ExtResource("5_d04qd")
metadata/_custom_type_script = "uid://6chdyvdnouf4"

[node name="PingMgr" type="Node" parent="ServerInterface"]
script = ExtResource("6_g7dyb")

[node name="ConnectionTimeout" type="Node" parent="ServerInterface"]
script = ExtResource("7_qu4p1")
metadata/_custom_type_script = "uid://cvvp2pnf02iv8"

[node name="Logger" type="Node" parent="."]
script = ExtResource("8_ar0u2")
